devops/deployments/challenge/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge
  namespace: flinks
  annotations:
    checkov.io/skip1: CKV_K8S_43=Accepting not to use digest for image versions
spec:
  replicas: 3
  selector:
    matchLabels:
      app: challenge
  template:
    metadata:
      labels:
        app: challenge
    spec:
      securityContext: &securityContext
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 15000
        runAsGroup: 30000
        runAsNonRoot: true
      automountServiceAccountToken: false
      volumes:
        - name: webdata
          emptyDir: {}
      containers:
        - image: nginx:1.19
          name: challenge
          imagePullPolicy: Always
          volumeMounts:
            - name: webdata
              mountPath: "/usr/share/nginx/html"
          ports:
            - containerPort: 80
          resources: *resources
          securityContext: *securityContextContainer
          livenessProbe: &probeconf
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe: *probeconf
