devops/deployments/challenge/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: challenge-svc
  namespace: flinks
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: challenge
