devops/deployments/challenge/04-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: challenge
  namespace: flinks
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: challenge.domain.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: challenge-svc
                port:
                  number: 80
